--- a/laboratory-management/package.json
+++ b/laboratory-management/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.12",
     "@fortawesome/free-solid-svg-icons": "5.6.3",
     "@fortawesome/react-fontawesome": "0.1.4",
+    "@material-ui/core": "^4.1.1",
     "antd": "^3.19.3",
     "availity-reactstrap-validation": "2.0.6",
     "axios": "^0.19.0",
